<resources>
    <string name="app_name">WhiteCity</string>

    <string name="title_comidas_tradicionales">Comida Tipica</string>
    <string name="title_hoteles">Hoteles</string>
    <string name="title_museos">Museos</string>
    <string name="title_iglesias">Iglesias</string>
    <string name="title_lista_usuario">Lista de Usuarios</string>
    <string name="title_lista_sitios">Lista de Sitios</string>
    <string name="title_favoitos">Favoritos</string>


    <string name="hint1">citywhite2020@gmail.com</string>
    <string name="hint2">password</string>
    <string name="txtbtn1">Login</string>
    <string name="bio">Michael Schumacher (pronunciado /mɪçaeːl ʃuːmaxɐ/) (Hürth-Hermülheim, Alemania Occidental; 3 de enero de 1969) es un expiloto alemán de automovilismo de velocidad, el más laureado de la historia de Fórmula 1. Ha ganado siete campeonatos mundiales de Fórmula 1: dos con la escudería Benetton en 1994 y 1995,1​ y cinco con Ferrari entre 2000 y 2004,1​ superando en ello los cinco campeonatos conseguidos por Juan Manuel Fangio.
Asimismo, fue subcampeón en 1998 y 2006, tercero en 1992, 1996 y 2005, cuarto en 1993 y quinto en 1999. En 1997 acabó subcampeón, aunque fue posteriormente descalificado sin puntos. Acumuló 91 victorias y 155 podios, superando los números de Alain Prost, quien ostentaba dichos récords en la década de los 90. Si tenemos en cuenta el actual sistema de puntos, el Káiser contaría con 3.890 puntos, siendo así el piloto con más puntos en la historia de Fórmula 1.
Tras retirarse de Fórmula 1 en 2006, Schumacher compitió en motociclismo de velocidad en 2007. Sin embargo, regresó a Fórmula 1 en 2010 a las órdenes de Ross Brawn en el equipo Mercedes.2​ Se retiró de forma definitiva al terminar 20123​ tras el anuncio del fichaje de Lewis Hamilton por las flechas de plata.4​
El 29 de diciembre de 2013, mientras disfrutaba de las vacaciones navideñas con su familia, sufrió un gravísimo accidente en la cabeza mientras practicaba esquí en la estación invernal francesa de Méribel (en Les Allues, Saboya, Alpes franceses), al esquiar fuera de pista.5​ Actualmente se encuentra recuperándose de sus graves lesiones en su domicilio, aunque se desconocen los detalles sobre su estado de salud, pues la familia ha decidido mantener su privacidad.</string>


    <!-- TODO: Remove or change this placeholder text -->

    <array name="categorias">
        <item>Seleccionar</item>
        <item>Iglesias</item>
        <item>Museos</item>
        <item>Comida Tradicional</item>
        <item>Hoteles</item>

    </array>
    <string name="view_more">ver mas</string>
    <string name="white_city">white city</string>
    <string name="texto_login_boton">Login / Registraté</string>
    <string name="texto_invitado_boton">Continuar como Invitado</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="cambiar_contrasenia">Cambiar Contraseña</string>
    <string name="confirma_nueva_contrasenia">Confirmar Nueva Contraseña</string>
    <string name="contrasenia">Contraseña</string>
    <string name="registro_de_nuevo_usuario">Registro de Nuevo Usuario</string>
    <string name="registrar">Registrar</string>
    <string name="completa_el_formulario_a_continuacion_y_disfruta_de_esta_hermosa_ciudad">Completa el formulario a continuacion y disfruta de esta hermosa ciudad...</string>
    <string name="bienvenidos">Bienvenidos!!</string>
    <string name="la_ciudad_blanca">La Ciudad Blanca</string>
    <string name="text_iniciar_sesion">Ya tengo cuenta, Iniciar Sesion</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tengo_cuenta">No tengo cuenta. Registrame</string>
    <string name="no_hay_sitios">No hay sitios agregados en favoritos</string>
    <string name="texto_ubicacion_detalle">VER EN MAPA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_edit_user">Edita tu informacion personal</string>
    <string name="text_btn_actualizar_datos_usuario">ACTUALIZAR DATOS</string>
    <string name="agregar_a_favoritos">agregar a favoritos</string>

</resources>
