<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.SplashActivity">

    <ImageView
        android:id="@+id/imgsplash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/white_city"
        app:srcCompat="@drawable/popayan"
        tools:srcCompat="@drawable/popayan" />

    <Button
        android:id="@+id/button_LoginRegistro"
        style="@style/boton_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/texto_login_boton"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/button_invitado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/texto_invitado_boton"
        android:textAlignment="center"
        android:visibility="invisible" />


</LinearLayout>