<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.RegistroFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="Mi Cuenta"
        android:textColor="#2E3032"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:shadowColor="#2E3032"
        android:text="@string/text_edit_user"
        android:textColor="#2C2727"
        app:layout_constraintBottom_toTopOf="@+id/name_edit_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/name_edit_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/pass_2_edit_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirma_nueva_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/pass_edit_usuario"
        app:layout_constraintStart_toStartOf="@+id/pass_edit_usuario"
        app:layout_constraintTop_toBottomOf="@+id/pass_edit_usuario" />

    <EditText
        android:id="@+id/pass_edit_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cambiar_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/pass_2_edit_usuario"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_usuario"
        app:layout_constraintStart_toStartOf="@+id/email_edit_usuario"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_usuario" />

    <EditText
        android:id="@+id/email_edit_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pass_edit_usuario"
        app:layout_constraintEnd_toEndOf="@+id/name_edit_usuario"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="@+id/name_edit_usuario"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_usuario" />

    <Button
        android:id="@+id/btn_actualizar_datos_usuario"
        style="@style/boton_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_login"
        android:text="@string/text_btn_actualizar_datos_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>