<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/input_email_iniciar_sesion"
        style="@style/input_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/input_pass_iniciar_sesion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_pass_iniciar_sesion"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/input_pass_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cambiar_contrasenia"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/btn_login_iniciar_sesion"
        app:layout_constraintStart_toStartOf="@+id/btn_login_iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@+id/input_email_iniciar_sesion" />

    <Button
        android:id="@+id/btn_login_iniciar_sesion"
        style="@style/boton_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_login"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/btn_registrarme_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="@+id/btn_registrarme_iniciar_sesion"
        app:layout_constraintStart_toStartOf="@+id/btn_registrarme_iniciar_sesion" />

    <TextView
        android:id="@+id/btn_registrarme_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/no_tengo_cuenta"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="8dp"

        android:layout_marginBottom="24dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/input_email_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/popayan" />

</androidx.constraintlayout.widget.ConstraintLayout>